# auto-reel

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TEST.md  Taskfile.yaml  concat_config.yaml  pyproject.toml
.github/workflows/: main.yaml
.tasks/: build.yaml  gpu.yaml  lint.yaml
movie_merge/: __init__.py  constants.py  enums.py
movie_merge/cli/: __init__.py  main.py
movie_merge/clip/: __init__.py  processor.py  title.py
movie_merge/config/: __init__.py  directory.py  exceptions.py  processing.py  sort.py
movie_merge/ffmepg/: __init__.py  exceptions.py  wrapper.py
movie_merge/movie/: __init__.py  processor.py
movie_merge/project/: __init__.py  exceptions.py  processor.py
movie_merge/utils/: __init__.py  exceptions.py  file.py  logging.py
