[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movie-merge"
version = "0.2.0"
description = "A tool for merging and processing video files with chapters and titles"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["video", "processing", "ffmpeg"]
authors = [
    { name = "Emil", email = "emil@jacero.se" }
]
dependencies = [
    "pyyaml>=6.0.0",
    "Pillow>=11.0.0",
    "numpy>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/emil-jacero/movie-merge"
Documentation = "https://movie-merge.readthedocs.io/"
Repository = "https://github.com/emil-jacero/movie-merge.git"
Issues = "https://github.com/emil-jacero/movie-merge/issues"

[project.scripts]
movie-merge = "movie_merge.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["movie_merge"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=movie_merge"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["movie_merge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["moviepy.*", "exifread.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0301",  # line-too-long (handled by black)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "fp", "id"]

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2
